--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-python-telegram-bot[job-queue]==20.7
+python-telegram-bot[job-queue]>=21.0
 python-dotenv==1.0.0
 psycopg2-binary==2.9.9
 pytz==2024.1
-numpy==1.24.3
+aiohttp==3.9.3
