--- a/.env
+++ b/.env
@@ -1,26 +1,49 @@
-# Обязательные настройки
+# ====================================
+# ОБЯЗАТЕЛЬНЫЕ ДЛЯ BHOST
+# ====================================
+
 BOT_TOKEN=ВАШ_ТОКЕН_ОТ_BOTFATHER
-DATABASE_URL=postgresql://user:password@localhost/dbname  # Если используете PostgreSQL
-
-# Настройки админа (опционально)
-ADMIN_ID=123456789  # Ваш Telegram ID
-
-# Настройки вебхука (если используете)
-DOMAIN=https://ваш-домен.bhost.ru
+WEBHOOK_MODE=true
 PORT=8443
-WEBHOOK_MODE=false  # true для вебхука, false для polling
-SECRET_TOKEN=ваш_секретный_токен  # Для верификации вебхука
 
-# Настройки кэша
+# ====================================
+# БАЗА ДАННЫХ
+# ====================================
+
+# Оставьте пустым для работы в памяти
+DATABASE_URL=
+
+# ====================================
+# АДМИНИСТРАТОР
+# ====================================
+
+# Ваш Telegram ID (узнать у @userinfobot)
+ADMIN_ID=0
+
+# ====================================
+# НАСТРОЙКИ КЭША
+# ====================================
+
 CACHE_ENABLED=true
 CACHE_TTL_SECONDS=300
 CACHE_CLEANUP_INTERVAL=60
 MAX_CACHE_SIZE=1000
 LOG_CACHE_STATS=true
 
-# Настройки чатов
+# ====================================
+# НАСТРОЙКИ ЧАТОВ
+# ====================================
+
 CHAT_VOTE_DURATION=300
 CHAT_DUEL_DURATION=300
 CHAT_ROLE_DURATION=86400
 CHAT_RECORD_CHECK_INTERVAL=300
 CHAT_NOTIFICATIONS_ENABLED=true
+
+# ====================================
+# ДОМЕН (ДОБАВИТЬ ПОСЛЕ ДЕПЛОЯ)
+# ====================================
+
+# Оставьте пустым, добавите после получения домена от BHost
+DOMAIN=
+SECRET_TOKEN=
