--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,29 @@
+# ========== ОСНОВНЫЕ ЗАВИСИМОСТИ ==========
+
+# Telegram Bot API
 python-telegram-bot[job-queue]==21.7
+
+# Конфигурация
 python-dotenv==1.0.0
-psycopg2-binary==2.9.9
+
+# База данных SQLite (встроена в Python, но для типов)
+typing-extensions==4.11.0
+
+# Время и даты
 pytz==2024.1
+
+# HTTP клиент (для возможных будущих интеграций)
 aiohttp==3.9.3
+
+# Логирование (стандартная библиотека, но для структурирования)
+colorlog==6.8.2
+
+# ========== ЗАВИСИМОСТИ ДЛЯ РАЗРАБОТКИ ==========
+# (не нужны для продакшена, можно удалить)
+
+# pytest==7.4.4
+# pytest-asyncio==0.23.2
+# black==24.1.1
+# isort==5.13.2
+# flake8==7.0.0
+# mypy==1.8.0
