--- a/.env
+++ b/.env
@@ -1,23 +1,16 @@
 # ====================================
-# ОБЯЗАТЕЛЬНЫЕ ДЛЯ BHOST
+# ОБЯЗАТЕЛЬНЫЕ ПЕРЕМЕННЫЕ
 # ====================================
 
+# Токен бота от @BotFather (ОБЯЗАТЕЛЬНО!)
 BOT_TOKEN=ВАШ_ТОКЕН_ОТ_BOTFATHER
-WEBHOOK_MODE=true
-PORT=8443
-
-# ====================================
-# БАЗА ДАННЫХ
-# ====================================
-
-# Оставьте пустым для работы в памяти
-DATABASE_URL=
 
 # ====================================
 # АДМИНИСТРАТОР
 # ====================================
 
 # Ваш Telegram ID (узнать у @userinfobot)
+# Нужно для команды /backup
 ADMIN_ID=0
 
 # ====================================
@@ -26,7 +19,6 @@ ADMIN_ID=0
 
 CACHE_ENABLED=true
 CACHE_TTL_SECONDS=300
-CACHE_CLEANUP_INTERVAL=60
 MAX_CACHE_SIZE=1000
 LOG_CACHE_STATS=true
 
@@ -36,14 +28,11 @@ LOG_CACHE_STATS=true
 
 CHAT_VOTE_DURATION=300
 CHAT_DUEL_DURATION=300
-CHAT_ROLE_DURATION=86400
-CHAT_RECORD_CHECK_INTERVAL=300
 CHAT_NOTIFICATIONS_ENABLED=true
 
 # ====================================
-# ДОМЕН (ДОБАВИТЬ ПОСЛЕ ДЕПЛОЯ)
+# НАСТРОЙКИ БЭКАПОВ
 # ====================================
 
-# Оставьте пустым, добавите после получения домена от BHost
-DOMAIN=
-SECRET_TOKEN=
+BACKUP_ENABLED=true
+BACKUP_RETENTION_DAYS=7
