--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ BOT_TOKEN=ВАШ_ТОКЕН_ОТ_BOTFATHER
 
 # Ваш Telegram ID (узнать у @userinfobot)
 # Нужно для команды /backup
-ADMIN_ID=0
+ADMIN_ID=5449121710
 
 # ====================================
 # НАСТРОЙКИ КЭША
