--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,23 @@
-# Файлы данных (не должны попадать в Git)
+# ============================================
+# ФАЙЛЫ ДАННЫХ (НЕ ДОЛЖНЫ ПОПАДАТЬ В GIT И ЗАЩИЩАЮТСЯ НА BOTHOST)
+# ============================================
+
+# Защищенные директории с данными
 /data/
-mishok_data.json
+/data/mishok_bot/
+/data/mishok_bot/*
+/mishok_data.json
 *.json
+!requirements.txt
 
 # Резервные копии
 backups/
 *.backup
+*.backup.*
 
-# Python
+# ============================================
+# PYTHON
+# ============================================
 __pycache__/
 *.py[cod]
 *$py.class
@@ -29,22 +39,32 @@ wheels/
 .installed.cfg
 *.egg
 
-# Environments
+# ============================================
+# СРЕДЫ И КОНФИГИ
+# ============================================
 .env
+.env.local
+.env.*.local
 .venv
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+*.env
 
-# IDE
+# ============================================
+# IDE И РЕДАКТОРЫ
+# ============================================
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
 
-# OS
+# ============================================
+# ОПЕРАЦИОННЫЕ СИСТЕМЫ
+# ============================================
 .DS_Store
 .DS_Store?
 ._*
@@ -53,5 +73,21 @@ venv.bak/
 ehthumbs.db
 Thumbs.db
 
-# Logs
+# ============================================
+# ЛОГИ
+# ============================================
 *.log
+logs/
+bot.log
+
+# ============================================
+# BOTHOST СПЕЦИФИЧНЫЕ
+# ============================================
+
+# Все что в /data/ должно быть защищено
+/data/*
+!/data/README.md
+
+# Временные файлы миграции
+*.tmp
+mishok_data.json.tmp
